update service and service interface